@@ -14,6 +14,7 @@ Bugs fixed
   object to str implicitly" error when link target url has a hash part.
   Thanks to Jorge_C.
 * #1467: Exception on Python3 if nonexistent method is specified by automethod
+* #1441: autosummary can't handle nested classes correctly.
 
 Release 1.2.2 (released Mar 2, 2014)
 ====================================
